--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "photo-helper",
-  "version": "1.0.0",
+  "displayName": "照片整理工具",
+  "version": "2.0.0",
   "main": "./out/main/index.js",
   "scripts": {
-    "dev": "electron-vite dev",
+    "dev": "electron-vite dev -w",
     "build": "electron-vite build",
     "postinstall": "electron-builder install-app-deps",
     "build:win": "npm run build && electron-builder --win --config",
@@ -13,16 +14,20 @@
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
+    "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.3.14",
     "exif": "^0.6.0",
     "fs-extra": "^11.1.1",
-    "pify": "^5.0.0"
+    "pify": "^5.0.0",
+    "unplugin-icons": "^22.1.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.1",
+    "@iconify-json/ep": "^1.2.1",
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^4.3.1",
     "@vue/eslint-config-prettier": "^8.0.0",
+    "commander": "^11.1.0",
     "electron": "^25.6.0",
     "electron-builder": "^24.6.3",
     "electron-vite": "^1.0.27",
