--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
     "@element-plus/icons-vue": "^2.3.1",
+    "electron-log": "^5.4.3",
     "element-plus": "^2.3.14",
     "exif": "^0.6.0",
     "fs-extra": "^11.1.1",
